# StructuralPatterns

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.py
include/adapter/: Facebook.h  FacebookAdapter.h  ISocialAdapter.h  Instagram.h  InstagramAdapter.h
include/composite/: Album.h  Directory.h  File.h  IComponent.h  IFile.h  Song.h
include/decorator/: BasePizza.h  Pizza.h  PizzaDecorator.h  PizzaWithChees.h  PizzaWithMashroom.h  PizzaWithTomato.h
src/: Facebook.cpp  FacebookAdapter.cpp  Instagram.cpp  InstagramAdapter.cpp
src/adapter/: Facebook.cpp  FacebookAdapter.cpp  Instagram.cpp  InstagramAdapter.cpp
src/composite/: Album.cpp  Directory.cpp  File.cpp  Song.cpp
src/decorator/: BasePizza.cpp  PizzaDecorator.cpp  PizzaWithChees.cpp  PizzaWithMashroom.cpp  PizzaWithTomato.cpp
